# datadrift_base_framework

./: .gitignore  README.md
.claude/: settings.json
ddoc/: .gitignore  11_install_pytest.sh  51_grep_cmd.sh  52_find_dummy_files.sh  README.md  pyproject.toml
ddoc/ddoc/cli/: main.py  plugins.py
ddoc/ddoc/cli/commands/: __init__.py  add.py  plugin.py  utils.py
ddoc/ddoc/cli/commands/analyze/: __init__.py  drift.py  eda.py
ddoc/ddoc/cli/commands/legacy/: README.md  __init__.py
ddoc/ddoc/core/: cache_service.py  git_service.py  mlflow_experiment_service.py  schemas.py  staging_service.py  version_service.py
ddoc/ddoc/doc/dev/: typer_usage.md
ddoc/ddoc/plugins/: hookspecs.py
ddoc/ddoc/tracking/: __init__.py
ddoc/docs/: README.md
ddoc/docs/advanced/: workflows.md
ddoc/docs/guides/: experiments.md  snapshots.md  trainer.md
ddoc/docs/reference/: commands.md
ddoc/docs/releases/: v2.0.0.md  v2.0.2.md
ddoc/docs/v1/: PROJECT_STRUCTURE.md  README_ddoc.md
ddoc/plugins/ddoc-full/: README.md  install_dev.sh  pyproject.toml
ddoc/plugins/ddoc-plugin-audio/: pyproject.toml
ddoc/plugins/ddoc-plugin-audio/ddoc_plugin_audio/: __init__.py  audio_impl.py
ddoc/plugins/ddoc-plugin-nlp/: remove_plugin.sh
ddoc/plugins/ddoc-plugin-nlp/ddoc_plugin_nlp/__old__/: nlp_impl-v1.py
ddoc/plugins/ddoc-plugin-text/: pyproject.toml
ddoc/plugins/ddoc-plugin-timeseries/ddoc_plugin_timeseries/: __init__.py  timeseries_impl.py
ddoc/plugins/ddoc-plugin-vis/ddoc_plugin_vis/: README.md  app.py
ddoc/plugins/ddoc-plugin-vis/ddoc_plugin_vis/services/: dataset_manager.py  dvc_cli.py  experiments.py  git_cli.py
ddoc/plugins/ddoc-plugin-vis/ddoc_plugin_vis/services/__old__/: dataset_manager-v1.py  dataset_manager-v3.py
ddoc/plugins/ddoc-plugin-vis/ddoc_plugin_vis/src/: train.py
ddoc/plugins/ddoc-plugin-vis/ddoc_plugin_vis/utils/: ui.py
ddoc/plugins/ddoc-plugin-vis/ddoc_plugin_vis/views/: sidebar.py  tabs_about.py  tabs_artifacts.py  tabs_pipeline.py
ddoc/plugins/ddoc-plugin-vis/ddoc_plugin_vis/views/__old__/: tabs_data-v1.py
ddoc/plugins/ddoc-plugin-yolo/ddoc_plugin_yolo/: __init__.py  yolo_impl.py
ddoc/scripts/: 03_ddoc_test_cmd.sh  register_lineage.py  run_drift_experiment.sh  split_yolo_dataset.py
ddoc/tests/: test_pluggy_issue.py  test_snapshot_workflow.py
ddoc/tests/golden/: eda.report.json  transform_upper.stdout.json
drift_studio/backend/: requirements.txt
drift_studio/backend/app/reports/: report_service.py
drift_studio/ddoc/: 01_make_venv.sh  03_install_ddoc.sh  04_pypi_upload.sh  11_install_pytest.sh  12_pytest.sh  21_remove_ddoc.sh  README.md  pyproject.toml
drift_studio/ddoc-workspace/: Dockerfile
drift_studio/ddoc/ddoc/: __init__.py
drift_studio/ddoc/ddoc/builtin_plugins/: builtin_impls.py
drift_studio/ddoc/ddoc/core/: dataset_service.py  file_service.py  (+9 more)
drift_studio/ddoc/docs/: changelog.md
drift_studio/ddoc/plugins/ddoc-plugin-categorical/: pyproject.toml
drift_studio/ddoc/plugins/ddoc-plugin-categorical/ddoc_plugin_categorical/: __init__.py  categorical_impl.py
drift_studio/ddoc/plugins/ddoc-plugin-nlp/: pyproject.toml
drift_studio/ddoc/plugins/ddoc-plugin-nlp/__old__/: setup.py
drift_studio/ddoc/plugins/ddoc-plugin-nlp/ddoc_plugin_nlp/: nlp_impl.py  tester.py
drift_studio/ddoc/plugins/ddoc-plugin-nlp/ddoc_plugin_nlp/__old__/: nlp_impl-v2.py  nlp_impl-v3.py
drift_studio/ddoc/plugins/ddoc-plugin-tabular/: pyproject.toml
drift_studio/ddoc/plugins/ddoc-plugin-tabular/ddoc_plugin_tabular/: __init__.py  tabular_impl.py
drift_studio/ddoc/plugins/ddoc-plugin-tabular/ddoc_plugin_tabular/templates/: eda_report.html
drift_studio/ddoc/plugins/ddoc-plugin-timeseries/: pyproject.toml
drift_studio/ddoc/plugins/ddoc-plugin-vis/: clear_project.sh  pyproject.toml  remove_plugin.sh
drift_studio/ddoc/plugins/ddoc-plugin-vis/ddoc_plugin_vis/: vis_impl.py
drift_studio/ddoc/plugins/ddoc-plugin-vis/ddoc_plugin_vis/core/: constants.py  state.py
drift_studio/ddoc/plugins/ddoc-plugin-vis/ddoc_plugin_vis/services/: artifacts.py
drift_studio/ddoc/plugins/ddoc-plugin-vis/ddoc_plugin_vis/utils/: eda.py
drift_studio/ddoc/plugins/ddoc-plugin-vis/ddoc_plugin_vis/views/: tabs_dashboard.py  tabs_data.py  tabs_terminal.py
drift_studio/ddoc/plugins/ddoc-plugin-vision/: CHANGELOG.md  pyproject.toml
drift_studio/ddoc/plugins/ddoc-plugin-vision/ddoc_plugin_vision/: __init__.py  vision_impl.py
drift_studio/ddoc/plugins/ddoc-plugin-vision/ddoc_plugin_vision/cache_utils/: __init__.py  cache_manager.py  cache_repository.py  cache_utils.py
drift_studio/ddoc/plugins/ddoc-plugin-vision/ddoc_plugin_vision/data_utils/: __init__.py  attribute_analyzer.py  embedding_analyzer.py  xai_analyzer.py  xai_visualizer.py
drift_studio/ddoc/plugins/ddoc-plugin-vision/ddoc_plugin_vision/report_generator/: __init__.py  create_report.py  guideline_generator.py  report_layout.py
drift_studio/ddoc/plugins/ddoc-plugin-yolo/: pyproject.toml
drift_studio/ddoc/scripts/: 01_plugin_test.sh  02_plugin_test_nlp.sh  render_detector_cookbook.py
drift_studio/ddoc/tests/: __conftest.py  test_detector_cookbook_consistency.py  test_detector_cookbook_renderer.py  test_examples_generate.py  test_plugin_categorical.py  test_plugin_tabular.py  test_recipe.py  test_recipe_catalog.py  test_round28_attr_drifts_shape.py  test_sample.py  test_server.py  test_server_gui.py  test_server_recipe.py  test_server_round19.py  test_server_round21.py  test_server_round22.py  test_server_round23.py  test_server_round24.py  test_server_round25.py  test_staging_workflow.py  test_version_alias.py
drift_studio/ddoc/usecase_pq/: ddocv2_full_experiment.sh  ddocv2_setup_environment.sh  ddocv2_test_dataprocess.sh  ddocv2_test_modelprocess.sh
sandbox/ddoc_mvp_v01/: README.md
sandbox/ddoc_mvp_v01/ddoc_core/: pyproject.toml
sandbox/ddoc_mvp_v01/ddoc_core/src/ddoc_core/: cli.py  types.py
sandbox/ddoc_mvp_v01/ddoc_core/src/ddoc_core/adapters/: detect.py
sandbox/ddoc_mvp_v02/: README.md  docker-compose.yml
sandbox/ddoc_mvp_v02/sample_data/: sample.csv  sample2.csv
server/: run_colima.sh
(+88 files in other folders)
