[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ddoc-full"
version = "2.1.0"
description = "ddoc with all analysis plugins (vision, text, timeseries, audio)"
requires-python = ">=3.9"
dependencies = [
    # For local development: install without version constraints to use latest local versions
    # For production: these should be published to PyPI and use version constraints like "ddoc>=2.1.0"
    "ddoc",
    "ddoc-plugin-vision",
    "ddoc-plugin-text",
    "ddoc-plugin-timeseries",
    "ddoc-plugin-audio",
]

[tool.setuptools]
packages = []

