[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ddoc-plugin-audio"
version = "1.0.0"
description = "Audio analysis plugin for ddoc (audio file analysis, drift detection)"
requires-python = ">=3.9"
dependencies = [
    "pluggy>=1.5.0",
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "scikit-learn>=1.0.0",
    "librosa>=0.10.0",
    "pyyaml>=6.0",
]

[project.entry-points."ddoc"]
ddoc_audio = "ddoc_plugin_audio.audio_impl:DOCAudioPlugin"

[tool.setuptools]
packages = {find = {where = ["."], include = ["ddoc_plugin_audio*"]}}
include-package-data = true
zip-safe = false

