[project]
name = "ddoc-core"
version = "0.1.0"
description = "ddoc core runtime (adapters/operators) + CLI"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12",
  "pydantic>=2.7",
  "pandas>=2.2",
]

[project.scripts]
ddoc = "ddoc_core.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
