[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ddoc-plugin-nlp"
version = "0.1.0"
description = "NLP transforms for ddoc"
requires-python = ">=3.9"
dependencies = [
    "pluggy>=1.5.0"
    # add more deps if needed
]

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.packages.find]
include = ["ddoc_plugin_nlp", "ddoc_plugin_nlp.*"]

[project.entry-points."ddoc"]
ddoc_nlp = "ddoc_plugin_nlp.nlp_impl:DDOCNlpPlugin"
