[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ddoc-plugin-timeseries"
version = "1.0.0"
description = "Time series analysis plugin for ddoc (CSV time series analysis, drift detection)"
requires-python = ">=3.9"
dependencies = [
    "pluggy>=1.5.0",
    "pandas>=1.3.0",
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "scikit-learn>=1.0.0",
    "statsmodels>=0.13.0",
    "pyyaml>=6.0",
]

[project.entry-points."ddoc"]
ddoc_timeseries = "ddoc_plugin_timeseries.timeseries_impl:DOCTimeSeriesPlugin"

[tool.setuptools]
packages = {find = {where = ["."], include = ["ddoc_plugin_timeseries*"]}}
include-package-data = true
zip-safe = false

