[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ddoc-plugin-vis"
version = "0.1.0"
description = "Visualization frontend for ddoc"
requires-python = ">=3.9"
dependencies = [
    "pluggy>=1.5.0"
]

[project.entry-points."ddoc"]
ddoc_vis = "ddoc_plugin_vis.vis_impl:DDOCVisPlugin"

[tool.setuptools]
packages = {find = {where = ["."], include = ["ddoc_plugin_vis*"]}}
include-package-data = true
zip-safe = false

[tool.setuptools.package-data]
ddoc_plugin_vis = ["app.py", "views/*.py", "core/*.py", "services/*.py", "src/*.py", "utils/*.py"]