[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ddoc-plugin-yolo"
version = "0.1.0"
description = "YOLO training plugin for ddoc"
requires-python = ">=3.9"
dependencies = [
    "pluggy>=1.5.0",
    "ultralytics>=8.0.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "opencv-python>=4.6.0",
    "pyyaml>=6.0",
    "pandas>=1.3.0",
]

[project.entry-points."ddoc"]
ddoc_yolo = "ddoc_plugin_yolo.yolo_impl:DDOCYoloPlugin"

[tool.setuptools]
packages = {find = {where = ["."], include = ["ddoc_plugin_yolo*"]}}
include-package-data = true
zip-safe = false
